--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en"> 
 <head>
   <title>Hello world App</title>
 </head>
 <body>
 <div id="root"></div>
+<script src="bundle.js"></script>
 </body>
 </html>
